--- a/Sandbox.EFCore/Sandbox.EFCore.csproj
+++ b/Sandbox.EFCore/Sandbox.EFCore.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.15" />
   </ItemGroup>
 
 </Project>
