--- a/VotingSystem.Tests/VotingSystem.Tests.csproj
+++ b/VotingSystem.Tests/VotingSystem.Tests.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VotingSystem\VotingSystem.csproj" />
+  </ItemGroup>
+
+
 </Project>
