--- a/VotingSystem.Database.Tests/VotingSystem.Database.Tests.csproj
+++ b/VotingSystem.Database.Tests/VotingSystem.Database.Tests.csproj
@@ -10,6 +10,9 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.15" />
   </ItemGroup>
 
   <ItemGroup>
