--- a/VotingSystem.Database.Tests/VotingSystem.Database.Tests.csproj
+++ b/VotingSystem.Database.Tests/VotingSystem.Database.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -11,12 +11,11 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
 
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.15" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VotingSystem.Application\VotingSystem.Application.csproj" />
+    <ProjectReference Include="..\VotingSystem.Database\VotingSystem.Database.csproj" />
   </ItemGroup>
 
 </Project>
