Move the IvotingSystemPersitance to the VotingSystem project

--- a/VotingSystem.Database/VotingSystem.Database.csproj
+++ b/VotingSystem.Database/VotingSystem.Database.csproj
@@ -4,13 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  
   <ItemGroup>
-    <ProjectReference Include="..\VotingSystem.Application\VotingSystem.Application.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
   </ItemGroup>
 
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
+    <ProjectReference Include="..\VotingSystem\VotingSystem.csproj" />
   </ItemGroup>
 
 </Project>
