--- a/VotingSystem.UI/VotingSystem.UI.csproj
+++ b/VotingSystem.UI/VotingSystem.UI.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.15" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\VotingSystem.Application\VotingSystem.Application.csproj" />
     <ProjectReference Include="..\VotingSystem.Database\VotingSystem.Database.csproj" />
   </ItemGroup>
